Fiksa ALLE 13 fuckings lydklippan i etymologi, va en heilt forjævli prosess, men da vart nå det ordna:))

--- a/main/etymylogi.html
+++ b/main/etymylogi.html
@@ -9,17 +9,73 @@
 </head>
 <body>
 	<article>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<p>Henrik er et navn som gått gjennom mange tidsperioder, og det brukes fortsatt jevnlig. Det var vanlig at tyske konger og tysk-romerske keisere hadde dette navnet. Dette går gjennom historiene. Henrik er den nedertyske og skandinaviske varianten av navnet Heinrich, som er nedertysk form av gammelhøytysk mannsnavnet. Navnets betydning er «hjemmets hersker», og ble kanskje derfor navnet på mange store konger som har verdt gjennom tidene. Henrik har også vært med å påvirke mange av de svenske etternavnene som; Henriksson, Henricson og de danske og norske etternavnene som Henriksen og Hendriksen. Navnet var ikke alltid vanlig i Norge, det ble mer og mer vanlig navn i Norge og Sverige rundt 1200-tallet. I middelalderen var det et helt vanlig navn, og det har vært populært lenge, men etter ett lite fall i bruket av navnet en periode, tok det seg opp og ble populært igjen i 1990-tallet.
-Selv om Henrik opprinnelig er en nedertysk og skandinavisk variant av navnet, finnes navnet på de fleste europeiske språk i ulike varianter. For eksempel i Polen staves navnet Henrykt, men uttales omtrent på samme måte. Det er flere ekvivalenter i andre språk som finsk, hvor navnet skrives Heikki, i Italia hvor det skrives Enrico og flere andre. En annen ekvivalent, som er et ganske anerkjent, er det engelske navnet Henry som er et fornavn for menn. Navnet stammer til slutt fra Heinrich, men Henri ble avledet fra det gammelfranske Henri, som selv kom fra det gamle-franske navnet Heimeric, fra vanlig germansk Haimarīks Det viser seg at på gammelhøytysk ble navnet snurret inn med Haginrich for å til slutt danne Heinrich. 		I middelalderens England ble Harry den korte form av navnet og ble ansett som den «talte formen» til Henry. Dette kan vises til engelske konger som flest ble kalt Harry. Det har vært et veldig populært navn i engelsktalende land i århundrer. Det var blant Top 100 mest populære navn som ble brukt til gutter født i land som USA, England og Wales, og til og med i Australia i 2007. I høymiddelalderen ble navnet latinisert som Henricus, dette ble et populært navn til konger i formen av Henrik, og som et gitt navn. Dette førte til at mange regionale varianter på språkene i vest- og sentral Europa som nevnt tidligere. 
-</p>
-		<p> Når man hovere over det sjuende ordet i Lorem Ipsum over uttaler nettsiden Henrik, gitt at brukeren har interactet med nettsiden.</p>
+		<p>
+			<span onmouseover="uttal('Henrik-Norsk')">Henrik</span> er et navn som gått gjennom mange tidsperioder, og det brukes fortsatt jevnlig. 
+			Det var vanlig at tyske konger og tysk-romerske keisere hadde dette navnet. Dette går gjennom historiene. Henrik er den nedertyske og 
+			skandinaviske varianten av navnet <span onmouseover="uttal('Heinrich-Nedertysk')">Heinrich</span>, som er nedertysk form av gammelhøytysk 
+			mannsnavnet. Navnets betydning er «hjemmets hersker», 
+			og ble kanskje derfor navnet på mange store konger som har verdt gjennom tidene. Henrik har også vært med å påvirke mange av de svenske 
+			etternavnene som; <span onmouseover="uttal('Henriksson-Svensk')">Henriksson</span>, 
+			<span onmouseover="uttal('Henricson-Svensk')">Henricson</span> 
+			og de danske og norske etternavnene som <span onmouseover="uttal('Henriksen-Norsk')">Henriksen</span> og 
+			<span onmouseover="uttal('Hendrikson-Norsk')">Hendriksen</span>. Navnet var ikke alltid vanlig i 
+			Norge, det ble mer og mer vanlig navn i Norge og Sverige rundt 1200-tallet. I middelalderen var det et helt vanlig navn, og det har vært 
+			populært lenge, men etter ett lite fall i bruket av navnet en periode, tok det seg opp og ble populært igjen i 1990-tallet.
+		</p>
+		<p>
+			Selv om Henrik opprinnelig er en nedertysk og skandinavisk variant av navnet, finnes navnet på de fleste europeiske språk i ulike varianter. 
+			For eksempel i Polen staves navnet <span onmouseover="uttal('Henrik-Norsk')">Henrykt</span>, men uttales omtrent på samme måte. Det er flere ekvivalenter i andre språk som finsk, hvor navnet 
+			skrives <span onmouseover="uttal('Heikki-Finsk')">Heikki</span>, i Italia hvor det skrives <span onmouseover="uttal('Enrico-Italiensk')">Enrico</span> 
+			og flere andre. En annen ekvivalent, som er et ganske anerkjent, er det engelske navnet <span onmouseover="uttal('Henry-Engelsk')">Henry</span> 
+			som er et fornavn for menn. Navnet stammer til slutt fra Heinrich, men Henry ble avledet fra det gammelfranske <span onmouseover="uttal('Henri-Fransk')">Henri</span>, som selv kom fra det 
+			gamle-franske navnet <span onmouseover="uttal('Heimrich-Fransk')">Heimeric</span>, fra vanlig germansk Haimarīks. Det viser seg at på gammelhøytysk ble navnet snurret inn med Haginrich for å til 
+			slutt danne Heinrich. I middelalderens England ble <span onmouseover="uttal('Harry-Engelsk')">Harry</span> den korte form av navnet og ble ansett som den «talte formen» til Henry. 
+			Dette kan vises til engelske konger som flest ble kalt Harry. Det har vært et veldig populært navn i engelsktalende land i århundrer. Det var 
+			blant Top 100 mest populære navn som ble brukt til gutter født i land som USA, England og Wales, og til og med i Australia i 2007. 
+			I høymiddelalderen ble navnet latinisert som <span onmouseover="uttal('Henricus-Latin')">Henricus</span>, dette ble et populært navn til konger i formen av Henrik, og som et gitt navn. 
+			Dette førte til at mange regionale varianter på språkene i vest- og sentral Europa som nevnt tidligere. 
+		</p>
 	</article>
 	<div style="display: none">
 		<audio controls id="Henrik-Norsk">
 			<source src="media/sound_files/etymologi/Henrik-Norsk.mp3" type="audio/mp3">
 		</audio>
-		<!-- SETT INN MEIR AUDIO ELEMENT HER! BRUK SPAN I TEKSTEN MED mouseonover="uttal('tingen')", og sett iden her lik argumentet lik filnavnet-->
+		<audio controls id="Heinrich-Nedertysk">
+			<source src="media/sound_files/etymologi/Heinrich-Nedertysk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henriksson-Svensk">
+			<source src="media/sound_files/etymologi/Henriksson-Svensk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henricson-Svensk">
+			<source src="media/sound_files/etymologi/Henricson-Svensk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henriksen-Norsk">
+			<source src="media/sound_files/etymologi/Henriksen-Norsk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Hendrikson-Norsk">
+			<source src="media/sound_files/etymologi/Hendrikson-Norsk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Heikki-Finsk">
+			<source src="media/sound_files/etymologi/Heikki-Finsk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Enrico-Italiensk">
+			<source src="media/sound_files/etymologi/Enrico-Italiensk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henry-Engelsk">
+			<source src="media/sound_files/etymologi/Henry-Engelsk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henri-Fransk">
+			<source src="media/sound_files/etymologi/Henri-Fransk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Heimrich-Fransk">
+			<source src="media/sound_files/etymologi/Heimrich-Fransk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Harry-Engelsk">
+			<source src="media/sound_files/etymologi/Harry-Engelsk.mp3" type="audio/mp3">
+		</audio>
+		<audio controls id="Henricus-Latin">
+			<source src="media/sound_files/etymologi/Henricus-Latin.mp3" type="audio/mp3">
+		</audio>
 	</div>
 	<script src="js/etymylogi.js"></script>
 	<script src="js/Header_and_Footer.js"></script>
