--- a/main/index.html
+++ b/main/index.html
@@ -4,13 +4,73 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Henrik | Forside</title>
-	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
+	<link rel="icon" href="media/images/" type="image/logo.png">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-	<article>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	</article>
+	<div id="forsideInfo">
+	<h1>Om oss</h1>
+	<p>
+		Forsiden vil være det første som dukker opp når brukere besøker nettsiden. 
+		Dette vil være nye brukeres første møte med siden og derfor er det viktig at man ikke blir
+		 overveldet av tekst og annen informasjon, og at man i løpet av kort tid skal kunne
+		  forstå hva siden handler om. Det er også viktig at vi klarer å fenge nye brukere til 
+		  å utforske nettsiden videre. Dette skal vi oppnå gjennom et enkelt og minimalt, 
+		  men likevel gripende, design. Forsiden skal inneholde en tekst som skal, på en så konsis måte 
+		  som mulig, gi brukerne nok informasjon til at de ønsker å utforske siden videre. Vi vil sikte 
+		  på å plassere denne teksten lenger nede på nettsiden for å gjøre forsiden enkel og oversiktlig.	
+	</p>
+	</div>
+
+	<!--- Kilden til dette oppsettet her: https://www.youtube.com/watch?v=THIQgTqT-io-->
+
+	<div class="instaboksseksjon">
+		<h1>Prøv våre aplikasjoner</h1>
+		<ul class="boksgrid">
+			<li>
+				<div class="instaboks etymologi">
+					<a href="etymylogi.html">
+					<div class="bokstekst">
+						<h3>Etymologi</h3>
+						<p>
+							<!--Informativ tekst-->
+						</p>
+					</div></a>
+				</div>
+			</li>
+			<li>
+				<div class="instaboks historiskeHenriker">
+					<a href="historiske_henriker.html">
+					<div class="bokstekst">
+						<h3>Historie</h3>
+						<p></p>
+					</div></a>
+				</div>
+			</li>
+			<li>
+				<div class="instaboks henrikOrNot">
+					<a href="henrik_or_not.html">
+					<div class="bokstekst">
+						<h3>Henrik or Not</h3>
+						<p></p>
+					</div></a>
+				</div>
+			</li>
+            			<li>
+				<div class="instaboks sitater">
+					<a href="sitater.html">
+					<div class="bokstekst">
+						<h3>Henriksitater</h3>
+						<p></p>
+					</div></a>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+	<div id="signUp">
+		<a href="bli_en_henrik.html"><h1>Bli henrik i dag!</h1></a>
+	</div>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
 </html>
