Fiksa en del meir greier, og det som sku vær en produktiv dag har no fordufta tre tima av://

--- a/main/etymylogi.html
+++ b/main/etymylogi.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<article>
+		<h2>Etymologi</h2>
 		<p>
 			<span onmouseover="uttal('Henrik-Norsk')">Henrik</span> er et navn som gått gjennom mange tidsperioder, og det brukes fortsatt jevnlig. 
 			Det var vanlig at tyske konger og tysk-romerske keisere hadde dette navnet. Dette går gjennom historiene. Henrik er den nedertyske og 
