--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -12,6 +12,7 @@
 
 <body>
 	<article id="henrik_or_not">
+		<h2>Henrik or Not</h2>
 		<form>
 			<div class="formsection" id="daniel">
 				<img src="media/images/henrik_or_not/daniel.png">
