sidgihsdgiuhsg fiksa bilda

--- a/main/index.html
+++ b/main/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
 	<div id="forsideInfo">
-	<h2>Om oss</h2>
+	<h1>Om oss</h1>
 	<p>
-		Forsiden vil være det første som dukker opp når brukere besøker nettsiden. 
-		Dette vil være nye brukeres første møte med siden og derfor er det viktig at man ikke blir
-		 overveldet av tekst og annen informasjon, og at man i løpet av kort tid skal kunne
-		  forstå hva siden handler om. Det er også viktig at vi klarer å fenge nye brukere til 
-		  å utforske nettsiden videre. Dette skal vi oppnå gjennom et enkelt og minimalt, 
-		  men likevel gripende, design. Forsiden skal inneholde en tekst som skal, på en så konsis måte 
-		  som mulig, gi brukerne nok informasjon til at de ønsker å utforske siden videre. Vi vil sikte 
-		  på å plassere denne teksten lenger nede på nettsiden for å gjøre forsiden enkel og oversiktlig.	
+	Dette er en nettside for folk som elsker nanvnet Henrik. Målet vårt er å spre Henriks ufeilbarlige og pålitelige ord, 
+	slik at flere mennesker kan få gleden av å gå i hans lys, bli veiledet, og få svar på alle livets spørmsål.
+	</p>
+	<p>
+		<i>
+	Så blir de stående disse tre: Tro, håp og Henrik. Men størst blant dem er Henriken.
+		<br>
+	- Henrik, Holy Henrik: King Henrik	
+		</i>
 	</p>
 	</div>
 
-	<!--- Kilden til dette oppsettet her: https://www.youtube.com/watch?v=THIQgTqT-io-->
 
 	<div class="instaboksseksjon">
 		<h1>Prøv våre aplikasjoner</h1>
@@ -33,7 +33,7 @@
 					<div class="bokstekst">
 						<h3>Etymologi</h3>
 						<p>
-							<!--Informativ tekst-->
+							<!--Informativ tekst ?-->
 						</p>
 					</div></a>
 				</div>
@@ -69,8 +69,29 @@
 	</div>
 
 	<div id="signUp">
-		<a href="bli_en_henrik.html"><h1>Bli henrik i dag!</h1></a>
+		<a href="/bli_en_henrik.html"><h1>Bli henrik i dag!</h1></a>
+
 	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<article>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</article>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
 </html>
