--- a/main/sitater.html
+++ b/main/sitater.html
@@ -5,12 +5,19 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Henrik | Sitater</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
+	<!--Font for hele nettsiden utenom sitat:-->
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+	<!--Font for sitat:-->
+	<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
 </head>
 <body>
 	<article>
 		<h2>Sitater</h2>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br>
+		
+		<h2 class="sitat">Fin font, ikkje sant? Gjerne bruk til sitater.</h2>
+		
+		<br><br><br><br><br><br><br><br><br>
 	</article>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
