fikset litt med sitater

--- a/main/sitater.html
+++ b/main/sitater.html
@@ -11,13 +11,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
 </head>
 <body>
-	<article>
-		<h2>Sitater</h2>
-		<br><br><br><br><br><br>
+	<article class="sitatarticle">
 		
-		<h2 class="sitat">Fin font, ikkje sant? Gjerne bruk til sitater.</h2>
+		<div class="sitatboks">
+			<h2 class="sitat">De siste gjester
+				vi fulgte til grinden;
+				farvellets rester
+				tok nattevinden.</h2>
+			<p class="kilde">-Henrik Ibsen</p>
+		</div>
+
 		
-		<br><br><br><br><br><br><br><br><br>
 	</article>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
