jobba med Henrik or not js

--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -35,8 +35,6 @@
 					</label>
 				</fieldset>
 			</div>
-
-
 			<div class="formsection" id="jakob">
 				<img src="media/images/henrik_or_not/jakob.png">
 				<fieldset class="selection">
@@ -56,9 +54,6 @@
 					</label>
 				</fieldset>
 			</div>
-
-
-
 			<div class="formsection" id="thomas">
 				<img src="media/images/henrik_or_not/thomas.png">
 				<fieldset class="selection">
@@ -78,9 +73,6 @@
 					</label>
 				</fieldset>
 			</div>
-
-
-
 			<div class="formsection" id="morten">
 				<img src="media/images/henrik_or_not/morten.png">
 				<fieldset class="selection">
@@ -100,8 +92,6 @@
 					</label>
 				</fieldset>
 			</div>
-
-
 			<div class="formsection" id="eyvind">
 				<img src="media/images/henrik_or_not/eyvind.png">
 				<fieldset class="selection">
@@ -121,9 +111,6 @@
 					</label>
 				</fieldset>
 			</div>
-
-
-
 			<div class="formsection" id="rotete">
 				<img src="media/images/henrik_or_not/rotete.png">
 				<fieldset class="selection">
@@ -141,7 +128,7 @@
 						<input type="radio" id="ikkehenrik" name="question6" value="ikkehenrik">
 						Ikke Henrik
 					</label><br><br>
-					<input type="submit" id="henrikkjenner" value="Henrik-kjenner?">
+					<input type="submit" id="henrikkjenner" value="Henrik-kjenner?" onclick="sjekkSvar()">
 				</fieldset>
 			</div>
 
