Fiksa Henrik or Not JS ferdig!

--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -7,7 +7,6 @@
     <title>Henrik | Henrik or not?</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
-	<script src="js/henrik_or_not.js"></script>
 </head>
 
 <body>
@@ -128,7 +127,7 @@
 						<input type="radio" id="ikkehenrik" name="question6" value="ikkehenrik">
 						Ikke Henrik
 					</label><br><br>
-					<input type="submit" id="henrikkjenner" value="Henrik-kjenner?" onclick="sjekkSvar()">
+					<input type="button" id="henrikkjenner" value="Henrik-kjenner?" onclick="sjekkSvar()">
 				</fieldset>
 			</div>
 
@@ -138,12 +137,8 @@
 
 		</form>
 	</article>
+	<div id="svar"></div>
 	<script src="js/henrik_or_not.js"></script>
-
-    <footer>
-		<p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
-		<!--Lag JS-funksjon som setter footer på bunnen av siden dersom siden er kortere enn skjermehøyden-->
-	</footer>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
 
