--- a/main/etymylogi.html
+++ b/main/etymylogi.html
@@ -36,45 +36,49 @@
 			I høymiddelalderen ble navnet latinisert som <span onmouseover="uttal('Henricus-Latin')">Henricus</span>, dette ble et populært navn til konger i formen av Henrik, og som et gitt navn. 
 			Dette førte til at mange regionale varianter på språkene i vest- og sentral Europa som nevnt tidligere. 
 		</p>
+		<div class="tipBox">
+			<p>Psst: På denne siden kan du hovere over navnene i teksten for å få de uttalt:)</p>
+			<button onclick="this.parentElement.remove()">Ok!</button>
+		</div>
 	</article>
 	<div style="display: none">
-		<audio controls id="Henrik-Norsk">
+		<audio id="Henrik-Norsk">
 			<source src="media/sound_files/etymologi/Henrik-Norsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Heinrich-Nedertysk">
+		<audio id="Heinrich-Nedertysk">
 			<source src="media/sound_files/etymologi/Heinrich-Nedertysk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henriksson-Svensk">
+		<audio id="Henriksson-Svensk">
 			<source src="media/sound_files/etymologi/Henriksson-Svensk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henricson-Svensk">
+		<audio id="Henricson-Svensk">
 			<source src="media/sound_files/etymologi/Henricson-Svensk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henriksen-Norsk">
+		<audio id="Henriksen-Norsk">
 			<source src="media/sound_files/etymologi/Henriksen-Norsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Hendrikson-Norsk">
+		<audio id="Hendrikson-Norsk">
 			<source src="media/sound_files/etymologi/Hendrikson-Norsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Heikki-Finsk">
+		<audio id="Heikki-Finsk">
 			<source src="media/sound_files/etymologi/Heikki-Finsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Enrico-Italiensk">
+		<audio id="Enrico-Italiensk">
 			<source src="media/sound_files/etymologi/Enrico-Italiensk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henry-Engelsk">
+		<audio id="Henry-Engelsk">
 			<source src="media/sound_files/etymologi/Henry-Engelsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henri-Fransk">
+		<audio id="Henri-Fransk">
 			<source src="media/sound_files/etymologi/Henri-Fransk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Heimrich-Fransk">
+		<audio id="Heimrich-Fransk">
 			<source src="media/sound_files/etymologi/Heimrich-Fransk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Harry-Engelsk">
+		<audio id="Harry-Engelsk">
 			<source src="media/sound_files/etymologi/Harry-Engelsk.mp3" type="audio/mp3">
 		</audio>
-		<audio controls id="Henricus-Latin">
+		<audio id="Henricus-Latin">
 			<source src="media/sound_files/etymologi/Henricus-Latin.mp3" type="audio/mp3">
 		</audio>
 	</div>
