--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -7,6 +7,8 @@
     <title>Henrik | Henrik or not?</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://kit.fontawesome.com/566c5c9474.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
