tip box i historiske og P3_changes.html uferdig

--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -72,6 +72,11 @@
            
             <input id="previous" type="submit" value= "<" class="prev" onclick="newSlide(-1)" >
              <input id="next" type="submit" value= ">" class="next" onclick="newSlide(1)" >
+
+             <div class="tipBox">
+                <p>Psst: Bruk venstre og høyre piltast for neste slide</p>
+                <button onclick="this.parentElement.remove()">Ok!</button>
+            </div>
             <br><br><br><br>
 
             <script src="js/historiske_henriker.js"></script>
