Fiksa litt småtteria her og der:)

--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -76,7 +76,7 @@
              <input id="next" type="submit" value= ">" class="next" onclick="newSlide(1)" >
 
              <div class="tipBox">
-                <p>Psst: Bruk venstre og høyre piltast for neste slide</p>
+                <p>Psst: Bruk venstre og høyre piltast for neste slide:)</p>
                 <button onclick="this.parentElement.remove()">Ok!</button>
             </div>
             <br><br><br><br>
