Fiksa småteri, som å gjør etymologi elementan bold når dem uttales

--- a/main/sitater.html
+++ b/main/sitater.html
@@ -15,10 +15,7 @@
 <body>
 	<article id="sitatarticle">
 		<div id="sitatboks" onclick="nyttSitat()">
-			<h4 id="sitat">De siste gjester
-				vi fulgte til grinden;
-				farvellets rester
-				tok nattevinden.</h4>
+			<h4 id="sitat">De siste gjester vi fulgte til grinden; farvellets rester tok nattevinden.</h4>
 			<p id="kilde">-Henrik Ibsen</p>
 		</div>
 		<div class="tipBox">
