oppdaterte index.html

--- a/main/index.html
+++ b/main/index.html
@@ -26,54 +26,50 @@
 	</div>
 
 
-	<div class="instaboksseksjon">
-		<h1>Prøv våre aplikasjoner</h1>
-		<ul class="boksgrid">
-			<li>
-				<div class="instaboks etymologi">
-					<a href="etymylogi.html">
-					<div class="bokstekst">
-						<h3>Etymologi</h3>
-						<p>
-							<!--Informativ tekst ?-->
-						</p>
-					</div></a>
-				</div>
-			</li>
-			<li>
-				<div class="instaboks historiskeHenriker">
-					<a href="historiske_henriker.html">
-					<div class="bokstekst">
-						<h3>Historie</h3>
-						<p></p>
-					</div></a>
-				</div>
-			</li>
-			<li>
-				<div class="instaboks henrikOrNot">
-					<a href="henrik_or_not.html">
-					<div class="bokstekst">
-						<h3>Henrik or Not</h3>
-						<p></p>
-					</div></a>
-				</div>
-			</li>
-            			<li>
-				<div class="instaboks sitater">
-					<a href="sitater.html">
-					<div class="bokstekst">
-						<h3>Henriksitater</h3>
-						<p></p>
-					</div></a>
-				</div>
-			</li>
-		</ul>
-	</div>
+	
+	<div class="bokseseksjon">
+		<h2>Prøv våre applikasjoner</h2>
 
-	<div id="signUp">
-		<a href="/bli_en_henrik.html"><h1>Bli henrik i dag!</h1></a>
+        <div class="boksestyle">
+            <a class="bokselink" href="etymylogi.html">
+                <div id="etymologiboks">
+                    <h1>Etymologi</h1>
+                </div>
+            </a>
+        </div>
 
+
+        <div class="boksestyle">
+            <a class="bokselink" href="historiske_henriker.html">
+                <div id="historiskehenrikerboks">
+                    <h1>Historiske Henriker</h1>
+                </div>
+            </a>
+        </div>
+
+        <div class="boksestyle">
+            <a class="bokselink" href="henrik_or_not.html">
+                <div id="henrikornotboks">
+                    <h1>Henrik or Not</h1>
+                </div>
+            </a>
+        </div>
+
+
+        <div class="boksestyle">
+            <a class="bokselink" href="sitater.html">
+                <div id="sitaterboks">
+                    <h1>Sitater</h1>
+                </div>
+            </a>
+		</div>
+
+		<div id="blienhenriklink">
+			<a href="bli_en_henrik.html"><h1>Klikk her for å bli en henrik i dag</h1></a>
+		</div>
 	</div>
+	
+
 
 
 
