added image alt

--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -16,7 +16,7 @@
 		<h2>Henrik or Not</h2>
 		<form>
 			<div class="formsection" id="daniel">
-				<img src="media/images/henrik_or_not/daniel.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/daniel.png">
 				<fieldset class="selection">
 
 					<!--Disse må oppføre seg annerledes når størrelsen er liten-->
@@ -37,7 +37,7 @@
 				</fieldset>
 			</div>
 			<div class="formsection" id="jakob">
-				<img src="media/images/henrik_or_not/jakob.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/jakob.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
 						<input type="radio" id="henrik" name="question2" value="henrik">
@@ -56,7 +56,7 @@
 				</fieldset>
 			</div>
 			<div class="formsection" id="thomas">
-				<img src="media/images/henrik_or_not/thomas.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/thomas.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
 						<input type="radio" id="henrik" name="question3" value="henrik">
@@ -75,7 +75,7 @@
 				</fieldset>
 			</div>
 			<div class="formsection" id="morten">
-				<img src="media/images/henrik_or_not/morten.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/morten.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
 						<input type="radio" id="henrik" name="question4" value="henrik">
@@ -94,7 +94,7 @@
 				</fieldset>
 			</div>
 			<div class="formsection" id="eyvind">
-				<img src="media/images/henrik_or_not/eyvind.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/eyvind.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
 						<input type="radio" id="henrik" name="question5" value="henrik">
@@ -113,7 +113,7 @@
 				</fieldset>
 			</div>
 			<div class="formsection" id="rotete">
-				<img src="media/images/henrik_or_not/rotete.png">
+				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/rotete.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
 						<input type="radio" id="henrik" name="question6" value="henrik">
