--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -18,20 +18,18 @@
 			<div class="formsection" id="daniel">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/daniel.png">
 				<fieldset class="selection">
-
-					<!--Disse må oppføre seg annerledes når størrelsen er liten-->
 					<label class="chesdfckmark" for="henrik">
-						<input type="radio" id="henrik" name="question1" value="henrik">
+						<input type="radio" class="henrik" name="question1" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question1" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question1" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question1" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question1" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -40,17 +38,17 @@
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/jakob.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question2" value="henrik">
+						<input type="radio" class="henrik" name="question2" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question2" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question2" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question2" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question2" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -59,17 +57,17 @@
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/thomas.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question3" value="henrik">
+						<input type="radio" class="henrik" name="question3" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question3" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question3" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question3" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question3" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -78,17 +76,17 @@
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/morten.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question4" value="henrik">
+						<input type="radio" class="henrik" name="question4" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question4" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question4" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question4" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question4" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -97,17 +95,17 @@
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/eyvind.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question5" value="henrik">
+						<input type="radio" class="henrik" name="question5" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question5" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question5" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question5" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question5" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -116,17 +114,17 @@
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/rotete.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question6" value="henrik">
+						<input type="radio" class="henrik" name="question6" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question6" value="idhenrik">
+						<input type="radio" class="idhenrik" name="question6" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question6" value="ikkehenrik">
+						<input type="radio" class="ikkehenrik" name="question6" value="ikkehenrik">
 						Ikke Henrik
 					</label><br><br>
 					<input type="button" id="henrikkjenner" value="Henrik-kjenner?" onclick="sjekkSvar()">
