--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -18,7 +18,7 @@
 			<div class="formsection" id="daniel">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/daniel.png">
 				<fieldset class="selection">
-					<label class="chesdfckmark" for="henrik">
+					<label class="checkmark" for="henrik">
 						<input type="radio" class="henrik" name="question1" value="henrik">
 						Henrik
 					</label>
