manglet bli en henrik

--- a/p3_endringer/p3_changes.html
+++ b/p3_endringer/p3_changes.html
@@ -25,21 +25,23 @@
 		
         <h4>Header_and_Footer.js</h4>
         <p>Vi har lagt til en ekstra javascript-fil, Header_and_Footer.js, ettersom det er en mer modulær måte å håndtere delte html-elementer. Det er også en funksjon som endrer header når vinduet blir lite. </p>
-		<h4>Etymologi</h4>
+        
+        <h4>Etymologi</h4>
 		<p>Etymologi-siden har blitt endret til en kolonne istedenfor to. Vi mener dette matchet resten av siden bedre. Vi droppet også en direkte liste over Henrik på ulike språk, ettersom det hadde vært mye repetisjon av teksten. Vi fikk også ikke inn uttalelser på absolutt alle språk, ettersom noen uttaler var vanskelig å finne. Istedenfor en liste, valgte vi at hvis du hovrer over ett Henrik-navn i teksten vil det spilles av en lydfil hvordan navnet uttales. Vi droppet også bilder av forskjellige “Henriker” på denne siden, fordi vi syntes den tok seg best ut uten. Og det hadde tatt vekk litt av meningen til “Historiske Henriker”. I konsollen vil det logges at den ikke kan spille av lyd før brukeren har gjort noe på nettsiden(for eksempel klikket), men dette tror vi ikke kan fikses.</p>
 		
 		
 		<h4>Historiske Henriker</h4>
 		<p> I motsetning til mockupen har nettsiden tekst øverst etterfulgt av et bilde. Det er ingen avsnitt under bildet. Det er også lagt til noen store, blå knapper for enklere navigering. Akkurat som i etymylogi.html har vi kun en kolonne, ettersom det ser mer minimalistisk ut. I tillegg la vi til en tips-boks som informerer om at piltaster kan brukes for navigering. Vi nevnte heller ikke at piltaster skal kunne brukes til navigering.</p>
-        <h4>Bli en Henrik i dag</h4>
-		<p>Hovedattraksjonen</p>
+        
+ 
 		
 		
 		<h4>Henrik or Not</h4>
 		<p>Her brukte vi slideshow, med knapper for navigering under. På siste slide har vi en “henrik-kjenner”-knapp på siden av bildet, heller enn under som spesifisert i P2. Vi mente dette så mer elegant ut.</p>
 		
 		
-		
+        <h4>Bli en henrik</h4>
+        <p>I bli_en_henrik brukte Daniel og Jakob javascript for å validere et form. I tillegg vil submit-knappen lage en ferdig utfylt mail som kan sendes til Jakob. Url-en vil også sjekkes for parametre fra henrik or not, noe som kan oppdatere html-en. </p>
 		<h4>Sitat av Henrik</h4>
         <p>   I P2 limte vi inn feil tekst i html-dokumentet under sitater. Det vi mente å skrive er: </p>
         <p>«Denne siden vil gjennom et enkelt museklikk hente frem et tilfeldig, men likevel gripende, sitat kreditert til en historisk Henrik. Målet med denne siden er å inspirere brukerne våre, men også å gi dem et innblikk i den dype innsikten, endeløse vittigheten og mektige visdommen som har gått fra Henrik til Henrik gjennom historien.</p>
