--- a/p3_endringer/p3_changes.html
+++ b/p3_endringer/p3_changes.html
@@ -70,7 +70,8 @@
 			<li>media/<ul>
 				<li>images/<ul>
 					<li>henrik_or_not_images/</li>
-					<li>historiske_henriker_images/</li>
+                    <li>historiske_henriker_images/</li>
+                    <li>forsideikoner/</li>
                     <li>logo.png</li>
                     <li>favicon.png</li>
 				</ul></li>
