fikset en skrivefeil

--- a/main/index.html
+++ b/main/index.html
@@ -14,7 +14,7 @@
 	<div id="forsideInfo">
 	<h1>Om oss</h1>
 	<p>
-	Dette er en nettside for folk som elsker nanvnet Henrik. Målet vårt er å spre Henriks ufeilbarlige og pålitelige ord, 
+	Dette er en nettside for folk som elsker navnet Henrik. Målet vårt er å spre Henriks ufeilbarlige og pålitelige ord, 
 	slik at flere mennesker kan få gleden av å gå i hans lys, bli veiledet, og få svar på alle livets spørmsål.
 	</p>
 	<p>
