fiksede validerings-errors i henrik or not

--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -18,18 +18,18 @@
 			<div class="formsection" id="daniel">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/daniel.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question1" value="henrik">
+					<label class="checkmark" for="henrik1">
+						<input type="radio" id="henrik1" class="henrik" name="question1" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question1" value="idhenrik">
+					<label class="checkmark" for="idhenrik1">
+						<input type="radio" id="idhenrik1" class="idhenrik" name="question1" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question1" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik1">
+						<input type="radio" id="ikkehenrik1" class="ikkehenrik" name="question1" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -37,18 +37,18 @@
 			<div class="formsection" id="jakob">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/jakob.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question2" value="henrik">
+					<label class="checkmark" for="henrik2">
+						<input type="radio" id="henrik2" class="henrik" name="question2" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question2" value="idhenrik">
+					<label class="checkmark" for="idhenrik2">
+						<input type="radio" id="idhenrik2" class="idhenrik" name="question2" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question2" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik2">
+						<input type="radio" id="ikkehenrik2" class="ikkehenrik" name="question2" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -56,18 +56,18 @@
 			<div class="formsection" id="thomas">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/thomas.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question3" value="henrik">
+					<label class="checkmark" for="henrik3">
+						<input type="radio" id="henrik3" class="henrik" name="question3" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question3" value="idhenrik">
+					<label class="checkmark" for="idhenrik3">
+						<input type="radio" id="idhenrik3" class="idhenrik" name="question3" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question3" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik3">
+						<input type="radio" id="ikkehenrik3" class="ikkehenrik" name="question3" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -75,18 +75,18 @@
 			<div class="formsection" id="morten">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/morten.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question4" value="henrik">
+					<label class="checkmark" for="henrik4">
+						<input type="radio" id="henrik4" class="henrik" name="question4" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question4" value="idhenrik">
+					<label class="checkmark" for="idhenrik4">
+						<input type="radio" id="idhenrik4" class="idhenrik" name="question4" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question4" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik4">
+						<input type="radio" id="ikkehenrik4" class="ikkehenrik" name="question4" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -94,18 +94,18 @@
 			<div class="formsection" id="eyvind">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/eyvind.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question5" value="henrik">
+					<label class="checkmark" for="henrik5">
+						<input type="radio" id="henrik5" class="henrik" name="question5" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question5" value="idhenrik">
+					<label class="checkmark" for="idhenrik5">
+						<input type="radio" id="idhenrik5" class="idhenrik" name="question5" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question5" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik5">
+						<input type="radio" id="ikkehenrik5" class="ikkehenrik" name="question5" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -113,18 +113,18 @@
 			<div class="formsection" id="rotete">
 				<img alt="Bilde av en Henrik?" src="media/images/henrik_or_not/rotete.png">
 				<fieldset class="selection">
-					<label class="checkmark" for="henrik">
-						<input type="radio" class="henrik" name="question6" value="henrik">
+					<label class="checkmark" for="henrik6">
+						<input type="radio" id="henrik6" class="henrik" name="question6" value="henrik">
 						Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="idhenrik">
-						<input type="radio" class="idhenrik" name="question6" value="idhenrik">
+					<label class="checkmark" for="idhenrik6">
+						<input type="radio" id="idhenrik6" class="idhenrik" name="question6" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
-					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" class="ikkehenrik" name="question6" value="ikkehenrik">
+					<label class="checkmark" for="ikkehenrik6">
+						<input type="radio" id="ikkehenrik6" class="ikkehenrik" name="question6" value="ikkehenrik">
 						Ikke Henrik
 					</label><br><br>
 					<input type="button" id="henrikkjenner" value="Henrik-kjenner?" onclick="sjekkSvar()">
