--- a/main/documents/P4/P4_testing_57.html
+++ b/main/documents/P4/P4_testing_57.html
@@ -67,7 +67,7 @@
             En testperson fant en feil i bli en henrik form validation-en, som gjorde det mulig å skrive inn aldre utenfor mengden som skulle vært der. En annen testperson fant ut at “bli en henrik” form validation-en tillot å fylle inn negative aldre.</p> 
             
         <p>Usability:
-            Vi fikk flere tilbakemeldinger om at bilder ikke lastet inn rett på mobil, men dette tolker vi som mindre problemer, gitt at de i målgruppen vår for det meste brukte PC. 
+            Vi fikk flere tilbakemeldinger om at bilder ikke lastet inn rett på mobil.
             To informatikkstudenter som brukte pc med google chrome, rapporterte at noen av bildene ikke ble vist. Vi forstår ikke helt hva som har skjedd her, ettersom det fungerer for alle gruppens medlemmer.
             Vi har også fått tilbakemelding at index.html er buggy på mobil. Footeren og boksene oppfører seg rart og plasserer seg ikke der de skal være.
             En tester som brukte Safari på mobil fikk ikke lyden til å fungere på etymylogi-siden, noe vi har reprodusert. 
