--- a/main/documents/P4/P4_testing_57.html
+++ b/main/documents/P4/P4_testing_57.html
@@ -75,7 +75,7 @@
             </p>
 		
 		
-        <h4>Your respons</h4>
+        <h4>Your response</h4>
         <p>Design & navigation: 
             Ettersom hovedandelen av tilbakemeldinger var positive, og kun en som mente at det var forvirrende å ha linker til alle undersidene både i header og index.html, har vi ikke tenkt å gjøre noen endringer her.</p> 
             
